--- a/src/app/modules/auth-module/components/authorization/register/register.component.html
+++ b/src/app/modules/auth-module/components/authorization/register/register.component.html
@@ -15,7 +15,7 @@
                 formControlName="firstName"
                 [required]="true"
                 [type]="InputType.text"
-                [errorCode]="errorCode('firstName') | translate">
+                [errorCode]="errorCode('firstName')">
               </app-input>
               <app-input
                 class="xl:w-3/5"
@@ -24,7 +24,7 @@
                 formControlName="lastName"
                 [required]="true"
                 [type]="InputType.text"
-                [errorCode]="errorCode('lastName') | translate">
+                [errorCode]="errorCode('lastName')">
               </app-input>
             </div>
             <div class="xl:flex xl:gap-4">
@@ -34,7 +34,7 @@
                 autocomplete="off"
                 formControlName="dateOfBirth"
                 [required]="true"
-                [errorCode]="errorCode('dateOfBirth') | translate">
+                [errorCode]="errorCode('dateOfBirth')">
               </app-input-date>
               <app-input
                 class="xl:w-3/5"
@@ -42,7 +42,7 @@
                 autocomplete="tel"
                 formControlName="phoneNumber"
                 [type]="InputType.email"
-                [errorCode]="errorCode('phoneNumber') | translate">
+                [errorCode]="errorCode('phoneNumber')">
               </app-input>
             </div>
             <app-input
@@ -51,7 +51,7 @@
               formControlName="email"
               [required]="true"
               [type]="InputType.email"
-              [errorCode]="errorCode('email') | translate">
+              [errorCode]="errorCode('email')">
             </app-input>
             <app-input
               label="{{ 'auth-module.register-component.password' | translate }}"
@@ -59,7 +59,7 @@
               formControlName="password"
               [required]="true"
               [type]="InputType.password"
-              [errorCode]="errorCode('password') | translate">
+              [errorCode]="errorCode('password')">
             </app-input>
             <app-input
               label="{{ 'auth-module.register-component.repeat-password' | translate }}"
@@ -67,7 +67,7 @@
               formControlName="repeatPassword"
               [required]="true"
               [type]="InputType.password"
-              [errorCode]="errorCode('repeatPassword') | translate">
+              [errorCode]="errorCode('repeatPassword')">
             </app-input>
             <div class="mt-4">
               <app-button class="mt-4" label="{{ 'auth-module.register-component.sign-up' | translate }}"></app-button>
