--- a/src/app/modules/shop-module/components/main/basket/basket-item/basket-item.component.html
+++ b/src/app/modules/shop-module/components/main/basket/basket-item/basket-item.component.html
@@ -1,24 +1,24 @@
 <div class="flex justify-between items-center px-4 py-2 bg-neutral-900 rounded-xl">
   <div class="flex items-center gap-2">
-    @if (basketItem().productFileId) {
+    @if (basketItem().product.fileId) {
       <img class="object-contain h-20 w-20 rounded-xl" [src]="image()" />
     }
-    <span class="text-white font-semibold">{{ basketItem().productName }}</span>
+    <span class="text-white font-semibold">{{ basketItem().product.name }}</span>
   </div>
   <div class="flex gap-2 items-center">
-    <span class="text-white font-semibold">{{ basketItem().productPrice }}</span>
+    <span class="text-white font-semibold">{{ basketItem().product.price }} zł</span>
     <app-input-plus-minus
       [minValue]="1"
       [(value)]="basketItem().quantity"
       (valueChange)="quantityChange.emit(basketItem())"></app-input-plus-minus>
     <app-button-icon
-      [icon]="basketItem().productIsInPurchaseList ? IconType.fillHeart : IconType.heart"
+      [icon]="basketItem().product.isInPurchaseList ? IconType.fillHeart : IconType.heart"
       [layout]="ButtonLayout.outline"
       (onClick)="setIsFavouriteOpen()">
       <app-drop-down [(isVisible)]="isFavouriteOpen">
         <app-add-product-to-purchase-list
           [isVisible]="isFavouriteOpen()"
-          [productId]="basketItem().productId"
+          [productId]="basketItem().product.id"
           (isInPurchaseListChange)="onInPurchaseListChange($event)"
           (onClose)="isFavouriteOpen.set($event)">
         </app-add-product-to-purchase-list>
