--- a/src/app/modules/shop-module/components/settings/product-base/product-base-form/product-property-form/product-property-form.component.html
+++ b/src/app/modules/shop-module/components/settings/product-base/product-base-form/product-property-form/product-property-form.component.html
@@ -6,7 +6,7 @@
   </div>
   <app-input
     formControlName="name"
-    [errorCode]="errorCode('name') | translate"
+    [errorCode]="errorCode('name')"
     [label]="'shop-module.product-property-form-component.name' | translate"
     [required]="true">
   </app-input>
