--- a/src/app/modules/shop-module/components/shared/add-product-to-purchase-list/small-purchase-list-form/small-purchase-list-form.component.html
+++ b/src/app/modules/shop-module/components/shared/add-product-to-purchase-list/small-purchase-list-form/small-purchase-list-form.component.html
@@ -1,4 +1,4 @@
 <form class="flex mt-2" [formGroup]="form">
-  <app-input class="w-full mr-2" formControlName="name" [errorCode]="errorCode('name') | translate"></app-input>
+  <app-input class="w-full mr-2" formControlName="name" [errorCode]="errorCode('name')"></app-input>
   <app-button [label]="'small-purchase-list-form-component.add' | translate" (onClick)="submit()"></app-button>
 </form>
