--- a/src/app/modules/shop-module/components/shared/add-purchase-list/add-purchase-list.component.html
+++ b/src/app/modules/shop-module/components/shared/add-purchase-list/add-purchase-list.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form">
   <app-input
     formControlName="name"
-    [errorCode]="errorCode('name') | translate"
+    [errorCode]="errorCode('name')"
     [label]="'shop-module.add-purchase-list-component.name' | translate">
   </app-input>
   <app-button [label]="'shop-module.add-purchase-list-component.add' | translate" (onClick)="submit()"></app-button>
