--- a/src/app/modules/shop-module/components/shared/product-shop-item/product-shop-item.component.html
+++ b/src/app/modules/shop-module/components/shared/product-shop-item/product-shop-item.component.html
@@ -35,7 +35,7 @@
     </div>
     <div class="pt-2">
       <app-button
-        [label]="'shop-module.product-item.component.add-to-basket' | translate"
+        [label]="'shop-module.product-shop-item-component.add-to-basket' | translate"
         (onClick)="addToBasket($event)">
       </app-button>
     </div>
