--- a/src/app/modules/shop-module/components/main/product/product-details/product-details.component.html
+++ b/src/app/modules/shop-module/components/main/product/product-details/product-details.component.html
@@ -18,11 +18,21 @@
     </div>
     <div class="flex flex-col flex-1 gap-4">
       <h1 class="text-xl text-white font-semibold">{{ product().name }}</h1>
-      <span class="text-xl text-white font-semibold"
-        >{{ 'shop-module.product-details.component.rating' | translate }}: 8.5/10
+      <span class="text-l text-white font-semibold"
+        >{{ 'shop-module.product-details.component.rating' | translate }}:
+        @if (product().rating > 0) {
+          {{ product().rating }}
+        } @else {
+          {{ 'shop-module.product-details.component.no-data' | translate }}
+        }
       </span>
       <span class="text-white font-semibold"
-        >{{ 'shop-module.product-details.component.product-feedback' | translate }}: 4
+        >{{ 'shop-module.product-details.component.product-feedback' | translate }}:
+        @if (product().reviewCount > 0) {
+          {{ product().reviewCount }}
+        } @else {
+          {{ 'shop-module.product-details.component.no-data' | translate }}
+        }
       </span>
       <div class="flex">
         <span class="text-xl text-white font-semibold">
@@ -62,5 +72,6 @@
       [header]="'shop-module.product-details.component.specyfication'"
       [items]="product().productParameters">
     </app-table>
+    <app-product-rating [(product)]="product"></app-product-rating>
   </div>
 </div>
