--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'tailwindcss';
 
+@theme {
+  --breakpoint-3xl: 112rem;
+}
+
 .h-workspace {
   height: calc(100vh - 6rem);
 }
