--- a/src/app/components/shared/input/input.component.html
+++ b/src/app/components/shared/input/input.component.html
@@ -1,7 +1,7 @@
 <div class="relative pb-6">
   @if (label()) {
     <label class="block my-1">
-      <span class="text-neutral-100 font-semibold">{{ label() }}</span>
+      <span class="text-white font-semibold">{{ label() }}</span>
       @if (required()) {
         <sup class="text-red-600">*</sup>
       }
