--- a/src/app/components/shared/modals/dialog-window/dialog-window.component.html
+++ b/src/app/components/shared/modals/dialog-window/dialog-window.component.html
@@ -1,7 +1,7 @@
 @if (isDialogActive()) {
   <div
     class="flex justify-center items-center w-full h-full absolute top-0 left-0 bg-neutral-500/30 backdrop-blur-sm z-50">
-    <div class="bg-neutral-800 min-w-80 min-h-40 p-4 rounded-xl">
+    <div class="bg-neutral-800 min-w-80 min-h-40 max-h-screen overflow-auto p-4 rounded-xl">
       <div class="flex justify-end">
         <app-button-icon [icon]="IconType.xMark" (onClick)="close()"></app-button-icon>
       </div>
