--- a/src/app/modules/shop-module/components/user-settings/order-data/order-data.component.html
+++ b/src/app/modules/shop-module/components/user-settings/order-data/order-data.component.html
@@ -1,7 +1,7 @@
 <div class="h-workspace px-4 bg-neutral-900 rounded-tl-xl overflow-auto">
   <div class="flex justify-center">
     <div class="flex flex-col gap-4 py-4 w-2/3">
-      <app-user-delivery-address [userDeliveryAddresses]="userDeliveryAddresses"></app-user-delivery-address>
+      <app-user-delivery-address [(userDeliveryAddresses)]="userDeliveryAddresses"></app-user-delivery-address>
       <app-user-company-details [userCompanyDetails]="userCompanyDetails"></app-user-company-details>
     </div>
   </div>
