--- a/src/app/components/shared/nav/nav.component.html
+++ b/src/app/components/shared/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="px-4 flex justify-between bg-neutral-900 mb-8">
+<nav class="h-16 px-4 flex justify-between bg-neutral-900 box-border border-b border-neutral-800">
   <div class="flex my-auto gap-2">
     @if (setMenuButton()) {
       <app-button-icon [icon]="IconType.bars3" [layout]="ButtonLayout.outline" (onClick)="onClickMenuButton.emit()">
