--- a/src/app/modules/product-module/components/product-base/product-base-list/product-base-list.component.html
+++ b/src/app/modules/product-module/components/product-base/product-base-list/product-base-list.component.html
@@ -1,5 +1,5 @@
 <app-table
-  class="block h-[calc(100vh-6rem)] bg-neutral-900 p-4 rounded-tl-xl"
+  class="block h-workspace bg-neutral-900 p-4"
   [buttonLabel]="'product-module.product-base-list-component.create-new-product-base'"
   [columns]="columns"
   [header]="'product-module.product-base-list-component.products-bases'"
