--- a/src/app/modules/shop-module/components/settings/ad-campaign/ad-campaign-list/ad-campaign-list.component.html
+++ b/src/app/modules/shop-module/components/settings/ad-campaign/ad-campaign-list/ad-campaign-list.component.html
@@ -1,5 +1,5 @@
 <app-table
-  class="block h-[calc(100vh-6rem)] bg-neutral-900 p-4 rounded-tl-xl"
+  class="block h-workspace bg-neutral-900 p-4"
   header="shop-module.ad-campaign-list-component.ad-campaigns"
   [buttonLabel]="'shop-module.ad-campaign-list-component.create-new-ad-campaign'"
   [columns]="columns"
