--- a/src/app/modules/shop-module/components/settings/promotion/promotion-list/promotion-list.component.html
+++ b/src/app/modules/shop-module/components/settings/promotion/promotion-list/promotion-list.component.html
@@ -1,5 +1,5 @@
 <app-table
-  class="block h-[calc(100vh-6rem)] bg-neutral-900 p-4 rounded-tl-xl"
+  class="block h-workspace bg-neutral-900 p-4"
   header="shop-module.promotion-list-component.promotions"
   [buttonLabel]="'shop-module.promotion-list-component.create-new-promotion'"
   [columns]="columns"
