--- a/src/app/modules/shop-module/components/user-settings/account-settings/account-settings.component.html
+++ b/src/app/modules/shop-module/components/user-settings/account-settings/account-settings.component.html
@@ -1,4 +1,4 @@
-<div class="h-workspace px-4 bg-neutral-900 rounded-tl-xl overflow-auto">
+<div class="h-workspace px-4 bg-neutral-900 overflow-auto">
   <div class="flex justify-center">
     <div class="flex flex-col gap-4 py-4 w-1/2">
       <app-user-basic-info class="w-full" [userBasicInfo]="userBasicInfo"></app-user-basic-info>
