--- a/src/app/modules/auth-module/components/settings/settings.component.html
+++ b/src/app/modules/auth-module/components/settings/settings.component.html
@@ -1,6 +1,2 @@
-<div class="flex max-sm:flex-col">
-  <app-aside [header]="'auth-module.settings-component.menu' | translate" [items]="items"></app-aside>
-  <div class="flex-auto">
-    <router-outlet></router-outlet>
-  </div>
-</div>
+<app-settings-layout [asideMenuHeader]="'auth-module.settings-component.menu' | translate" [items]="items">
+</app-settings-layout>
