--- a/src/app/modules/auth-module/components/settings/user/user-list/user-list.component.html
+++ b/src/app/modules/auth-module/components/settings/user/user-list/user-list.component.html
@@ -1,5 +1,5 @@
 <app-table
-  class="block h-[calc(100vh-6rem)] bg-neutral-900 p-4 rounded-tl-xl"
+  class="block h-workspace bg-neutral-900 p-4"
   [buttonLabel]="'auth-module.user-list-component.create-new-user'"
   [columns]="columns"
   [header]="'auth-module.user-list-component.users'"
