--- a/src/app/modules/product-module/components/category/category-list/category-list.component.html
+++ b/src/app/modules/product-module/components/category/category-list/category-list.component.html
@@ -1,5 +1,5 @@
 <app-table
-  class="block h-[calc(100vh-6rem)] bg-neutral-900 p-4 rounded-tl-xl"
+  class="block h-workspace bg-neutral-900 p-4"
   [buttonLabel]="'product-module.category-list-component.create-new-category'"
   [columns]="columns"
   [header]="'product-module.category-list-component.categories'"
