--- a/src/app/modules/product-module/components/product-base/product-base-form/product-base-form.component.html
+++ b/src/app/modules/product-module/components/product-base/product-base-form/product-base-form.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col h-full bg-neutral-900 rounded-tl-xl">
+<div class="flex flex-col h-workspace bg-neutral-900">
   <div class="flex justify-between items-center h-14.5 px-4 py-2">
     <h1 class="text-xl font-semibold text-white">{{ header | translate }}</h1>
     <app-button [label]="'product-module.product-base-form-component.save' | translate" (onClick)="submit()">
