--- a/src/app/modules/product-module/components/product/product-list/product-list.component.html
+++ b/src/app/modules/product-module/components/product/product-list/product-list.component.html
@@ -1,5 +1,5 @@
 <app-table
-  class="block h-[calc(100vh-6rem)] bg-neutral-900 p-4 rounded-tl-xl"
+  class="block h-workspace bg-neutral-900 p-4"
   [buttonLabel]="'product-module.product-list-component.create-new-product'"
   [columns]="columns"
   [header]="'product-module.product-list-component.products'"
