--- a/src/app/modules/shop-module/components/main/main.component.html
+++ b/src/app/modules/shop-module/components/main/main.component.html
@@ -1,18 +1,22 @@
-<app-nav [additionalUserItems]="userItems" [setMenuButton]="true" (onClickMenuButton)="isOpenedMenu.set(true)">
-  <app-nav-button [iconName]="IconType.shoppingBag" [routerLink]="ClientRoute.basket"></app-nav-button>
-  <app-nav-button [iconName]="IconType.heart" [routerLink]="ClientRoute.purchaseLists"></app-nav-button>
-  @if (userService.hasRole(UserType.employee) | async) {
-    <app-nav-button [iconName]="IconType.cog8Tooth" [routerLink]="ClientRoute.shopModule + '/' + ClientRoute.settings">
-    </app-nav-button>
-  }
-</app-nav>
-<div>
-  <div class="flex max-sm:flex-col max-w-360 mx-auto">
-    <div class="flex-auto">
-      <router-outlet></router-outlet>
+<div class="flex flex-col gap-4">
+  <app-nav [additionalUserItems]="userItems" [setMenuButton]="true" (onClickMenuButton)="isOpenedMenu.set(true)">
+    <app-nav-button [iconName]="IconType.shoppingBag" [routerLink]="ClientRoute.basket"></app-nav-button>
+    <app-nav-button [iconName]="IconType.heart" [routerLink]="ClientRoute.purchaseLists"></app-nav-button>
+    @if (userService.hasRole(UserType.employee) | async) {
+      <app-nav-button
+        [iconName]="IconType.cog8Tooth"
+        [routerLink]="ClientRoute.shopModule + '/' + ClientRoute.settings">
+      </app-nav-button>
+    }
+  </app-nav>
+  <div>
+    <div class="flex max-sm:flex-col max-w-360 mx-auto">
+      <div class="flex-auto">
+        <router-outlet></router-outlet>
+      </div>
     </div>
   </div>
+  @if (isOpenedMenu()) {
+    <app-shop-drawer-menu (onCloseMenu)="isOpenedMenu.set(false)"></app-shop-drawer-menu>
+  }
 </div>
-@if (isOpenedMenu()) {
-  <app-menu-aside (onCloseMenu)="isOpenedMenu.set(false)"></app-menu-aside>
-}
