--- a/src/app/modules/shop-module/components/settings/product-base/product-base-list/product-base-list.component.html
+++ b/src/app/modules/shop-module/components/settings/product-base/product-base-list/product-base-list.component.html
@@ -1,5 +1,5 @@
 <app-table
-  class="block h-[calc(100vh-6rem)] bg-neutral-900 p-4 rounded-tl-xl"
+  class="block h-workspace bg-neutral-900 p-4"
   [columns]="columns"
   [header]="'shop-module.product-base-list-component.products-bases'"
   [idName]="'id'"
