--- a/src/app/modules/shop-module/components/settings/product/product-form/product-form.component.html
+++ b/src/app/modules/shop-module/components/settings/product/product-form/product-form.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col h-workspace bg-neutral-900 rounded-tl-xl overflow-auto">
+<div class="flex flex-col h-workspace bg-neutral-900 overflow-auto">
   <div class="flex justify-between items-center h-14.5 px-4 py-2">
     <h1 class="text-xl font-semibold text-white">
       {{ 'shop-module.product-form-component.edit-product' | translate }}
