--- a/src/app/modules/shop-module/components/user-settings/user-settings.component.html
+++ b/src/app/modules/shop-module/components/user-settings/user-settings.component.html
@@ -1,6 +1,6 @@
 <app-nav></app-nav>
 <div class="flex max-sm:flex-col">
-  <app-aside [header]="'shop-module.settings-component.menu' | translate" [items]="items"></app-aside>
+  <app-aside-menu [header]="'shop-module.settings-component.menu' | translate" [items]="items"></app-aside-menu>
   <div class="flex-auto">
     <router-outlet></router-outlet>
   </div>
